Angular Template (Módulo de Usuário e Produto)

--- a/QuickBuy.Web/ClientApp/src/app/usuario/login/login.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/usuario/login/login.component.html
@@ -45,6 +45,7 @@
       <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" *ngIf="ativar_spinner"></span>
       Entrar
     </button>
+    <div>Novo por aqui? <a [routerLink]='["/novo-usuario"]' >Cadastre-se</a></div>
 
     <div class="alert alert-danger" *ngIf="mensagem">
         {{mensagem}}
