--- a/QuickBuy.Web/ClientApp/src/app/usuario/cadastro/cadastro.usuario.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/usuario/cadastro/cadastro.usuario.component.html
@@ -88,6 +88,10 @@
       {{mensagem}}
     </div>
 
+    <div class="alert alert-success" *ngIf="usuarioCadastrado">
+      Usuário cadastrado com sucesso! <a class="alert-link" [routerLink]='["/entrar"]'>Clique aqui</a> para entrar no sistema com a sua conta.
+    </div>
+
     <img src="../../../assets/img/quick-b-logo.jpg" />
 
   </form>
