--- a/QuickBuy.Web/ClientApp/src/app/loja/efetivar/loja.efetivar.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/loja/efetivar/loja.efetivar.component.html
@@ -16,7 +16,7 @@
             <td style="width:10%;"><img src="../../../../../arquivos/{{p.nomeArquivo}}" style="width:70%; height:auto;" /></td>
             <td style="width:50%;">{{p.descricao}}</td>
             <td style="width:10%;">
-              <input type="number" class="form-control" value="1" (change)="atualizarPreco(p), $event.target.value"
+              <input type="number" class="form-control" value="1" (change)="atualizarPreco(p, $event.target.value)"
                      [(ngModel)]="p.quantidade" placeholder="1" />
             </td>
             <td style="width:20%;">R$ {{p.preco | number: '1.0-2'}}</td>
@@ -33,10 +33,10 @@
             <table class="mb-4">
               <tr>
                 <td style="width:60%;"><strong>Total: </strong></td>
-                <td><strong>R$ 1300.00</strong></td>
+                <td><strong>R$ {{total | number: '1.0-2'}}</strong></td>
               </tr>
             </table>
-            <button class="btn btn-danger">Efetivar Compra</button>
+            <button class="btn btn-danger" style="width:100%;">Efetivar Compra</button>
           </div>
         </div>
       </div>
